Name:               crypto-pubkey-openssh
Version:            0.2.10.1
Synopsis:           OpenSSH keys decoder/encoder
Description:        OpenSSH keys decoder/encoder
License:            MIT
License-file:       LICENSE
Copyright:          Fedor Gogolev <knsd@knsd.net>
Author:             Fedor Gogolev <knsd@knsd.net>
                    Maxim Mitroshin <rocco66max@gmail.com>
                    Thomas DuBuisson <thomas.dubuisson@gmail.com>
Maintainer:         Fedor Gogolev <knsd@knsd.net>
Homepage:           https://github.com/knsd/crypto-pubkey-openssh
Bug-reports:        https://github.com/knsd/crypto-pubkey-openssh/issues
Category:           Cryptography, Parsing
Stability:          Alpha
Build-type:         Simple
Cabal-version:      >= 1.12
Tested-with:
    GHC == 8.10.7, GHC == 9.0.2, GHC == 9.4.7, GHC == 9.6.7, GHC == 9.8.4, GHC == 9.10.2

Extra-source-files:
  README.md

Flag OpenSsh
  Description:      Test with ssh-keygen
  Default:          False

Flag ci
  Description: More strict ghc options used for development and ci, not intended for end-use.
  Manual: True
  Default: False

Library
  Hs-source-dirs:   src

  if flag(ci)
    Ghc-options: -Wall -Werror -Wcompat -Wcpp-undef -Widentities -Wincomplete-uni-patterns -Wincomplete-patterns -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wredundant-constraints -Wpartial-fields -Wmissed-specialisations -Wno-implicit-prelude -Wno-safe -Wno-unsafe
    if impl (ghc >= 9.8)
      Ghc-options: -Wterm-variable-capture -Wextended-warnings
  else
    Ghc-options: -Wall

  Default-language: Haskell2010
  Build-depends:    base                       >= 4.14 && < 4.22
                  , bytestring
                  , base64-bytestring
                  , cereal
                  , attoparsec
                  , crypto-pubkey-types
                  , pem
                  , asn1-types
                  , asn1-encoding

  Exposed-modules:  Crypto.PubKey.OpenSsh
  Other-modules:    Crypto.PubKey.OpenSsh.Types
                    Crypto.PubKey.OpenSsh.Encode
                    Crypto.PubKey.OpenSsh.Decode

Test-suite crypto-pubkey-openssh-tests
  Main-is:          Tests.hs
  Hs-source-dirs:   src, tests
  Default-language: Haskell2010
  Type:             exitcode-stdio-1.0

  if flag(OpenSsh)
    cpp-options: -DOPENSSH

  Build-depends:    base
                  , bytestring
                  , base64-bytestring
                  , cereal
                  , attoparsec
                  , crypto-pubkey-types
                  , pem
                  , asn1-types
                  , asn1-encoding

                  , tasty
                  , tasty-quickcheck
                  , QuickCheck
                  , temporary
                  , process
                  , filepath
                  , deepseq

  Other-modules:    Crypto.PubKey.OpenSsh.Encode.Tests
                    Crypto.PubKey.OpenSsh.Decode.Tests
                    Crypto.PubKey.OpenSsh
                    Crypto.PubKey.OpenSsh.Decode
                    Crypto.PubKey.OpenSsh.Encode
                    Crypto.PubKey.OpenSsh.Types
                    SshKeygen

Source-repository head
  Type:             git
  Location:         https://github.com/knsd/crypto-pubkey-openssh
